--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "next": "11.1.2",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-parallax-tilt": "^1.5.57",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.19",
     "@types/styled-components": "^5.1.13",
     "babel-plugin-styled-components": "^1.13.2",
