--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.10",
     "date-fns": "^2.23.0",
+    "framer-motion": "^4.1.17",
     "graphql": "^15.5.3",
     "jwt-decode": "^3.1.2",
     "next": "11.1.2",
